[package]
name = "bevy-game"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# wasm
[lib]
crate-type = ["cdylib", "rlib"]

[features]
web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
rand = "0.8.4"
crossterm = "0.21.0"
pathfinding = "2.2.1"
rltk = "0.8.1"
wasm-bindgen = "0.2"
bevy_webgl2 = {version="0.5.2", optional=true}

# Dependencies for native only.
# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"